--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
