--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.4.7",
+    "@react-google-maps/api": "^2.19.3",
+    "country-state-city": "^3.2.1",
+    "date-fns": "^3.6.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
