--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.6.1",
+    "chart.js": "^4.4.7",
+    "country-state-city": "^3.2.1",
+    "date-fns": "^3.6.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.4.7",
-    "@react-google-maps/api": "^2.19.3",
-    "country-state-city": "^3.2.1",
-    "date-fns": "^3.6.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "world-countries": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
